--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
         <header>
             <h1>Classic Cheesecake Recipe</h1>
-            <img src="img/6dots.svg" alt='6dots'>
-            <p><i>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.</i></p>
+            <div class="header-text">
+                <img src="img/6dots.svg" alt='6dots'>
+                <p><i>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.</i></p>
+            </div>
         </header>
 
         <div class="banner">
@@ -23,23 +25,31 @@
                 <ul>
                     <li>
                         <img src="img/restaurant.png" alt="restaurant">
-                        <h5>Yields</h5>
-                        <h4>12 servings</h4>
+                        <div class="timings-item">
+                            <h5>Yields</h5>
+                            <h4>12 servings</h4>
+                        </div>
                     </li>
                     <li>
                         <img src="img/clock.png" alt="clock">
-                        <h5>Prep TIme</h5>
-                        <h4>45 minutes</h4>
+                        <div class="timings-item">
+                            <h5>Prep TIme</h5>
+                            <h4>45 minutes</h4>
+                        </div>
                     </li>
                     <li>
                         <img src="img/clock.png" alt="clock">
-                        <h5>Cook Time </h5>
-                        <h4>1 hour</h4>
+                        <div class="timings-item">
+                            <h5>Cook Time </h5>
+                            <h4>1 hour</h4>
+                        </div>
                     </li>
                     <li>
                         <img src="img/clock.png" alt="clock">
-                        <h5>Total Time</h5>
-                        <h4>7,75 hours</h4>
+                        <div class="timings-item">
+                            <h5>Total Time</h5>
+                            <h4>7,75 hours</h4>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -91,7 +101,7 @@
                             </li>
                             <li>
                                 <input type="checkbox">
-                                <label>topping suggestions: <i>salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce</i> (recipe in notes) </label>
+                                <label>topping suggestions: <b><i>salted caramel, lemon curd, strawberry topping, chocolate ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce</i></b> (recipe in notes) </label>
                             </li>
                         </ul>
                     </form>
@@ -99,13 +109,13 @@
                 <div class="instructions">
                     <h3>Instructions</h3>
                     <ol>
-                        <li>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</li>
-                        <li><b>Make the crust:</b> Using a food processor, pulse the graham crackers into crumbs. Pour into a medium bowl and stir in sugar and melted butter until combined. (You can also pulse it all together in the food processor.) Mixture will be sandy. Press firmly into the bottom and slightly up the sides of a 9-inch or 10-inch springform pan. No need to grease the pan first. I use the bottom of a measuring cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove from the oven and place the hot pan on a large piece of aluminum foil. The foil will wrap around the pan for the water bath in step 4. Allow crust to slightly cool as you prepare the filling.</li>
-                        <li><b>Make the filling:</b> Using a handheld or stand mixer fitted with a paddle attachment, beat the cream cheese and granulated sugar together on medium-high speed in a large bowl until the mixture is smooth and creamy, about 2 minutes. Add the sour cream, vanilla extract, and lemon juice then beat until fully combined. On medium speed, add the eggs one at a time, beating after each addition until just blended. After the final egg is incorporated into the batter, stop mixing. To help prevent the cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as best you can.</li>
-                        <li><b>Prepare the simple water bath (see note)</b> Boil a pot of water. You need 1 inch of water in your roasting pan for the water bath, so make sure you boil enough. I use an entire kettle of hot water. As the water is heating up, wrap the aluminum foil around the springform pan. Pour the cheesecake batter on top of the crust. Use a rubber spatula or spoon to smooth it into an even layer. Place the pan inside of a large roasting pan. Carefully pour the hot water inside of the pan and place in the oven. (Or you can place the roasting pan in the oven first, then pour the hot water in. Whichever is easier for you.)</li>
-                        <li>Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the center of the cheesecake will slightly wobble if you gently shake the pan. Turn the oven off and open the oven door slightly. Let the cheesecake sit in the oven in the water bath as it cools down for 1 hour. Remove from the oven and water bath, then cool cheesecake completely at room temperature. Then refrigerate the cheesecake for at least 4 hours or overnight.</li>
-                        <li>Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove the rim. Using a clean sharp knife, cut into slices for serving. For neat slices, wipe the knife clean and dip into warm water between each slice.</li>
-                        <li>Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator for up to 5 days.</li>
+                        <li><p>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</p></li>
+                        <li><p><b>Make the crust:</b> Using a food processor, pulse the graham crackers into crumbs. Pour into a medium bowl and stir in sugar and melted butter until combined. (You can also pulse it all together in the food processor.) Mixture will be sandy. Press firmly into the bottom and slightly up the sides of a 9-inch or 10-inch springform pan. No need to grease the pan first. I use the bottom of a measuring cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove from the oven and place the hot pan on a large piece of aluminum foil. The foil will wrap around the pan for the water bath in step 4. Allow crust to slightly cool as you prepare the filling.</p></li>
+                        <li><p><b>Make the filling:</b> Using a handheld or stand mixer fitted with a paddle attachment, beat the cream cheese and granulated sugar together on medium-high speed in a large bowl until the mixture is smooth and creamy, about 2 minutes. Add the sour cream, vanilla extract, and lemon juice then beat until fully combined. On medium speed, add the eggs one at a time, beating after each addition until just blended. After the final egg is incorporated into the batter, stop mixing. To help prevent the cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as best you can.</p></li>
+                        <li><p><b>Prepare the simple water bath (see note)</b> Boil a pot of water. You need 1 inch of water in your roasting pan for the water bath, so make sure you boil enough. I use an entire kettle of hot water. As the water is heating up, wrap the aluminum foil around the springform pan. Pour the cheesecake batter on top of the crust. Use a rubber spatula or spoon to smooth it into an even layer. Place the pan inside of a large roasting pan. Carefully pour the hot water inside of the pan and place in the oven. (Or you can place the roasting pan in the oven first, then pour the hot water in. Whichever is easier for you.)</p></li>
+                        <li><p>Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the center of the cheesecake will slightly wobble if you gently shake the pan. Turn the oven off and open the oven door slightly. Let the cheesecake sit in the oven in the water bath as it cools down for 1 hour. Remove from the oven and water bath, then cool cheesecake completely at room temperature. Then refrigerate the cheesecake for at least 4 hours or overnight.</p></li>
+                        <li><p>Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove the rim. Using a clean sharp knife, cut into slices for serving. For neat slices, wipe the knife clean and dip into warm water between each slice.</p></li>
+                        <li><p>Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator for up to 5 days.</li>
                     </ol>
                     <a href="https://sallysbakingaddiction.com/classic-cheesecake/ "><i>Source: https://sallysbakingaddiction.com/classic-cheesecake/ </i></a>
                 </div>
